docs/api/qiskit-ibm-runtime/0.23/options-measure-noise-learning-options.mdx
---
title: MeasureNoiseLearningOptions (v0.23)
description: API reference for qiskit_ibm_runtime.options.MeasureNoiseLearningOptions in qiskit-ibm-runtime v0.23
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.MeasureNoiseLearningOptions
---

# MeasureNoiseLearningOptions

<Class id="qiskit_ibm_runtime.options.MeasureNoiseLearningOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.23/qiskit_ibm_runtime/options/measure_noise_learning_options.py#L20-L40" signature="MeasureNoiseLearningOptions(*args, **kwargs)" modifiers="class">
  Options for measurement noise learning.

  <Admonition title="Note" type="note">
    These options are only used when the resilience level or options specify a technique that requires measurement noise learning.
  </Admonition>

  **Parameters**

  *   **num\_randomizations** – The number of random circuits to draw for the measurement learning experiment. Default: 32.
  *   **shots\_per\_randomization** – The number of shots to use for the learning experiment per random circuit. If “auto”, the value will be chosen automatically based on the input PUBs. Default: “auto”.

  ## Attributes

  ### num\_randomizations

  <Attribute id="qiskit_ibm_runtime.options.MeasureNoiseLearningOptions.num_randomizations" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ### shots\_per\_randomization

  <Attribute id="qiskit_ibm_runtime.options.MeasureNoiseLearningOptions.shots_per_randomization" attributeTypeHint="UnsetType | int | Literal['auto']" attributeValue="Unset" />

  ## Methods
</Class>

