docs/api/qiskit-ibm-runtime/0.33/options-measure-noise-learning-options.mdx
---
title: MeasureNoiseLearningOptions (v0.33)
description: API reference for qiskit_ibm_runtime.options.MeasureNoiseLearningOptions in qiskit-ibm-runtime v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.MeasureNoiseLearningOptions
---

# MeasureNoiseLearningOptions

<Class id="qiskit_ibm_runtime.options.MeasureNoiseLearningOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.33/qiskit_ibm_runtime/options/measure_noise_learning_options.py#L20-L44" signature="MeasureNoiseLearningOptions(num_randomizations=Unset, shots_per_randomization=Unset)" modifiers="class">
  Bases: `object`

  Options for measurement noise learning. This is only used by V2 Estimator.

  <Admonition title="Note" type="note">
    These options are only used when the resilience level or options specify a technique that requires measurement noise learning.
  </Admonition>

  ## Attributes

  **Parameters**

  *   **num\_randomizations** (*UnsetType | int*)
  *   **shots\_per\_randomization** (*UnsetType | int | Literal\['auto']*)

  ### num\_randomizations

  <Attribute id="qiskit_ibm_runtime.options.MeasureNoiseLearningOptions.num_randomizations" attributeTypeHint="UnsetType | int" attributeValue="Unset">
    The number of random circuits to draw for the measurement learning experiment.

    Default: 32.
  </Attribute>

  ### shots\_per\_randomization

  <Attribute id="qiskit_ibm_runtime.options.MeasureNoiseLearningOptions.shots_per_randomization" attributeTypeHint="UnsetType | int | Literal['auto']" attributeValue="Unset">
    The number of shots to use for the learning experiment per random circuit. If “auto”, the value will be chosen automatically based on the input PUBs.

    Default: “auto”.
  </Attribute>

  ## Methods
</Class>

